test/bad/sample54.dave
// Failed function definition
int main() {
    int i=0;
    for (i=0; i<100) {
        i++;
    }
    print(i);
}